feat: incremental op-based undo/redo for multiplayer collaboration
Refactor undo system from static full-graph NBT snapshots to per-instance
op-based incremental undo with batch support.

Core changes:
- GraphEditor: UndoEntry with per-op reverse, beginUndoBatch/endUndoBatch,
  enterActions focus-loss commit pattern, full reverseOp coverage for all
  user-triggered op types, REMOVE_NODE NBT snapshot restore
- OpExecutor: ADD_NODE NBT restore via restoreNodeFromNbt helper
- MonitorScreen: pixel editor Ctrl+Z fix (colorPicker interception),
  graph-level undo delegates to editor.keyPressed → opUndo
- Multiplayer multi-select: multiDragging mouseRelease sends MOVE ops +
  recordOp for all selected nodes, per-frame throttled sync
- Multi-select lock: GraphPresencePacket carries int[] selectedNodeIds
  for displaying lock on all selected nodes in multiplayer
- Comment drag: set preDragX/preDragY at drag start
- Comment resize: SET_COMMENT_SIZE reverseOp + resizeStartNodePositions

Design decisions:
- Text ops (SET_FORMULA, SET_COMMENT_TEXT) skip undo stack
- EditBox params/text commit on focus-loss/Enter/Ctrl+Z, not per-keystroke
- ADD_NODE_REQUEST records local node ID in oldVal as pre-ACK fallback

Co-Authored-By: Claude <noreply@anthropic.com>